--- a/scss/main.scss
+++ b/scss/main.scss
@@ -151,7 +151,7 @@ h1{
     box-shadow: 2px 10px 10px black;
     border: 1px solid rgb(0, 0, 0);
     overflow: hidden;
-
+    text-align: center;
     img{
         width: 100%;
         height: 80%;
@@ -165,17 +165,19 @@ h1{
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        font-size: 2vh;
         overflow: hidden;
+        h2{
+            font-size: 25px;
+        }
     }
 
     &:hover{
         transition: all 0.5s;
-        background-image: linear-gradient(rgb(255, 255, 255), var(--pink-500));
+        background-image: linear-gradient(rgb(7, 7, 7), var(--pink-500));
         transform: scale(0.9);
-        color: #eee;
-        border: 1px solid white;
-        box-shadow: 2px 10px 10px white;
+        color: #000000;
+        border: 1px solid rgb(0, 0, 0);
+        box-shadow: 2px 10px 10px rgb(0, 0, 0);
     }
 }
 
